
  * First forked/upstream release (1.0.0.1):
    - Apply patch 01_clear_servers.patch.
    - Apply patch glib-deprecated.diff. Provide support for old
      GLib versions.
    - Apply 02_server-name.patch. Provide support for non-Canonical
      UCCS servers.
    - Apply 03_x2go+rls.patch. Provide support for X2Go remote logins.
    - Extend README file, inform about the RLS fork by X2Go.
  * Add SERVER_NAME env var support.
  * Add X2Go support to RLS.
  * Provide via ppa:x2go/ppa and ppa:x2go/stable on Launchpad.
  * debian/rules:
    + Build using dh_autoreconf.
  * debian/copyright:
    + Add Upstream-Contract: field. Add myself as copyright holder.
  * debian/control:
    + Add B-Ds: dh-autoreconf, libgtest-dev, python. Enable the testsuite at build
      time.
    + Bump Standards: to 3.9.6. No changes needed.
  * debian/source/format:
    + Switch back to source format 1.0.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Sun, 02 Nov 2014 21:36:41 +0100

remote-login-service (1.0.0-0ubuntu3) raring; urgency=low

  * Don't use deprecated g_type_init() with recent glib2.0.

 -- Matthias Klose <doko@ubuntu.com>  Tue, 26 Feb 2013 10:40:57 +0100

remote-login-service (1.0.0-0ubuntu2) raring; urgency=low

  * SECURITY UPDATE: credentials disclosure via second login (LP: #1070896)
    - debian/patches/01_clear_servers.patch: Clear servers on second login
      in src/uccs-server.c, add test to tests/dbus-interface.c.
    - CVE-2012-0959

 -- Marc Deslauriers <marc.deslauriers@ubuntu.com>  Mon, 05 Nov 2012 14:05:14 -0500

remote-login-service (1.0.0-0ubuntu1) quantal; urgency=low

  * New upstream release.
    * Support caching the recently used server
  * debian/control: Add build dep on libgcrypt11-dev 

 -- Ted Gould <ted@ubuntu.com>  Thu, 20 Sep 2012 23:55:05 -0500

remote-login-service (0.7.0-0ubuntu1) quantal; urgency=low

  * New upstream release.
    - Fix NM service detection and fallback
    - Fix build on unoptimized build servers