@@ -8,6 +8,8 @@ remote-login-service-x2go (1.0.0.1-0x2go1) UNRELEASED; urgency=medium
       UCCS servers.
     - Apply 03_x2go+rls.patch. Provide support for X2Go remote logins.
     - Extend README file, inform about the RLS fork by X2Go.
+    - remote-login-service.conf.in: Add URLs for default X2Go Session Broker
+      installation.
   * Add SERVER_NAME env var support.
   * Add X2Go support to RLS.
   * Provide via ppa:x2go/ppa and ppa:x2go/stable on Launchpad.
